feat: add endpoint to list auth providers
